# worri

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
apps/api/: .editorconfig  .env.sample  .gitignore  app.ts  drizzle.config.ts  main.py  manage.py  nodemon.json  package-lock.json  package.json  pyproject.toml  server.ts  tsconfig.json
apps/api/api/: dependencies.py
apps/api/assets/: tracker.js
apps/api/controllers/: user.ts  websites.ts  workspaces.ts
apps/api/core/: admin.py  models.py  openapi_serializers.py  permissions.py  serializers.py  urls.py  views.py
apps/api/crud/: __init__.py  user.py  website.py  workspace.py
apps/api/database/: database.py
apps/api/db/: index.ts  migrate.ts  schema.ts
apps/api/docs/: swagger.ts
apps/api/logger/: devLogger.ts  index.ts  prodLogger.ts
apps/api/middlewares/: verifyToken.ts  zodParser.ts
apps/api/models/: __init__.py  event.py  session.py  user.py  website.py  workspace.py
apps/api/routers/: userRouter.ts  workspaceRouter.ts
apps/api/schemas/: auth.py  userSchemas.ts  website.py  workspace.py  workspaceSchema.ts
apps/api/utils/: security.py  token.ts
apps/api/worri_api/: asgi.py  env.py  settings.py  urls.py  wsgi.py
apps/fastApi/: alembic.ini  config.py  main.py  pyproject.toml
apps/fastApi/api/: __init__.py  dependencies.py
apps/fastApi/crud/: base.py  user.py  website.py  workspace.py
apps/fastApi/migrations/: env.py
apps/fastApi/models/: user.py
apps/fastApi/schemas/: auth.py  base.py  user.py  workspace.py
apps/fastApi/utils/: security.py
(+120 files in other folders)
