[tool.poetry]
name = "worri"
version = "0.1.0"
description = "simple & privacy focused self hosted web analytics"
authors = ["callback cat <76839908+chamanbravo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = { extras = ["email"], version = "^2.4.2" }
pydantic-settings = "^2.5.2"
psycopg2 = "^2.9.9"
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
